--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,14 @@
+# Virtual environments
 env/
+venv/
+.venv/
+
+# Python cache
 __pycache__/
 *.pyc
-app.db
+
+# Local databases
+*.db
+
+# OS junk
+.DS_Store
